@@ -229,32 +229,22 @@ TD, P
  }
 
 .vatable /* width of the div set for all photo sets - view albums  */
- { 
- 	width: 100%;
+ {
  }
-
-.vaspacer /*  spacing in view album  */
- { 
-	margin-left: 10px;
-	font-size: 5px;
- }
-
 .vathumbs /* full background bracket for images and text - veiw albums  */
- { 
-	margin:17px;
+ {
  }
-
+ 
 .vafloat /* float for view album - text */
  {
-	float: center; 
-	margin-left: 10px;
+ float: center;
  }
-
+ 
 .vafloat2 /* float for view album - images */
  {
- 	float: center; 
+  float: center;
  }
-
+ 
 .vasummary /* controls the view of Album summary */
 {
         font-weight:bold;
