@@ -1,3 +1,7 @@
+2004-08-25 JoEllen Drazan <skins@pownuke.com> 1.4.5-cvs-b127
+
+	* Change: Use divs instead of tables for view_album.php
+
 2004-08-24  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b126
 
 	* Fix:  Long filename / disclosure fix
